[project]
name = "melo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "anyascii>=0.3.2",
    "cached-path>=1.6.3",
    "cn2an>=0.5.22",
    "eng-to-ipa>=0.0.2",
    "fugashi>=1.3.2",
    "g2p-en>=2.1.0",
    "g2pkk>=0.1.2",
    "gradio>=4.44.1",
    "gruut[de,es,fr]>=2.4.0",
    "inflect>=7.4.0",
    "jamo>=0.4.1",
    "jieba>=0.42.1",
    "langid>=1.1.6",
    "librosa>=0.10.2.post1",
    "loguru>=0.7.2",
    "mecab-python3>=1.0.9",
    "num2words>=0.5.13",
    "pydub>=0.25.1",
    "pykakasi>=2.3.0",
    "pypinyin>=0.53.0",
    "tensorboard>=2.18.0",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "tqdm>=4.66.5",
    "transformers>=4.45.1",
    "txtsplit>=1.0.0",
    "unidecode>=1.3.8",
    "unidic>=1.1.0",
    "unidic-lite>=1.0.8",
]

[project.scripts]
melotts = "melo.main:main"
melo = "melo.main:main"
melo-ui = "melo.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
